# spatialos-sdk-rs

./: Cargo.toml
amethyst-example/: .gitignore  Cargo.toml  rust_worker.json
amethyst-example/src/: player.rs  server.rs
spatialos-sdk-tools/: Cargo.toml
spatialos-sdk/src/worker/: component.rs  entity.rs  snapshot.rs
