[workspace]

members = [
    "cargo-spatial",
    "project-example",
    "spatialos-sdk",
    "spatialos-sdk-code-generator",
    "spatialos-sdk-sys",
    "spatialos-sdk-tools",
    "test-suite"
]

exclude = [
    # Excluded from the workspace due to incompatible bindgen
    # This is fine, the spatial-sdk-tools are a cargo plugin, not a library
    "amethyst-example", 
]